--- a/research.html
+++ b/research.html
@@ -45,6 +45,7 @@
                         <a href="research.html" class="bg-fiu-gold text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">Research Projects</a>
                         <a href="faculty.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Faculty Mentors</a>
                         <a href="application.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Application Info</a>
+                        <a href="alumni.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Alumni</a>
                         <a href="faq.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">FAQs</a>
                         <a href="contact.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">Contact</a>
                     </div>
@@ -65,6 +66,7 @@
                 <a href="research.html" class="bg-fiu-gold text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Research Projects</a>
                 <a href="faculty.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Faculty Mentors</a>
                 <a href="application.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Application Info</a>
+                <a href="alumni.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Alumni</a>
                 <a href="faq.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">FAQs</a>
                 <a href="contact.html" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Contact</a>
             </div>
@@ -298,6 +300,195 @@
                     <div>
                         <img src="https://images.unsplash.com/photo-1639762681485-074b7f938ba0?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
                              alt="Quantum Technology" class="rounded-lg shadow-lg w-full">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Publications Section -->
+    <section class="py-16 bg-gray-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-12">
+                <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-4">Publications</h2>
+                <p class="text-xl text-gray-700">Selected Publications by Undergraduate Students</p>
+            </div>
+
+            <div class="max-w-6xl mx-auto">
+                <!-- 2021 Publications -->
+                <div class="mb-12">
+                    <h3 class="text-2xl font-bold text-fiu-navy mb-6">2021</h3>
+                    <div class="space-y-4">
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Alemany, Sheila, Jason Nucciarone, and Niki Pissinou. "Jespipe: A Plugin-Based, Open MPI Framework for Adversarial Machine Learning Analysis." <em>2021 IEEE International Conference on Big Data (Big Data)</em>. IEEE, 2021.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Hyman, Meleik, Calvin Mark, Ahmed Imteaj, Hamed Ghiaie, Shabnam Rezapour, Arif M. Sadri, and M. Hadi Amini. "Data analytics to evaluate the impact of infectious disease on economy: Case study of COVID-19 pandemic." <em>Patterns</em> 2, no. 8 (2021): 100315.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Imteaj, Ahmed, Raghad Alabagi, and M. Hadi Amini. "Exploiting Federated Learning Technique to Recognize Human Activities in Resource-Constrained Environment." <em>International Conference on Intelligent Human Computer Interaction</em>. Springer, Cham, 2021.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 2020 Publications -->
+                <div class="mb-12">
+                    <h3 class="text-2xl font-bold text-fiu-navy mb-6">2020</h3>
+                    <div class="space-y-4">
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Aleman, Concepcion Sanchez, Niki Pissinou, and Sheila Alemany. "Leontief-Based Data Cleaning Workload Distribution Strategy for EH-MWSN." <em>2020 IEEE International Workshop Technical Committee on Communications Quality and Reliability (CQR)</em>. IEEE, 2020.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 2019 Publications -->
+                <div class="mb-12">
+                    <h3 class="text-2xl font-bold text-fiu-navy mb-6">2019</h3>
+                    <div class="space-y-4">
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Shahid, Abdur R., et al. "Sensor-chain: a lightweight scalable blockchain framework for internet of things." <em>2019 International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</em>. IEEE, 2019.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Shahid, Abdur R., et al. "Towards the development of a differentially private lightweight and scalable blockchain for IoT." <em>2019 IEEE 16th International Conference on Mobile Ad Hoc and Sensor Systems Workshops (MASSW)</em>. IEEE, 2019.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Zeng, Wei, Abdur B. Shahid, Keyan Zolfaghari, Aditya Shetty, Niki Pissinou, and Sitharama S. Iyengar. "n-VDD: Location Privacy Protection Based on Voronoi-Delaunay Duality." <em>arXiv preprint arXiv:1906.09158</em> (2019).</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Shahid, Abdur R., Niki Pissinou, Laurent Njilla, Sheila Alemany, Ahmed Imteaj, Kia Makki, and Edwin Aguilar. "Quantifying location privacy in permissioned blockchain-based internet of things (iot)." <em>In Proceedings of the 16th EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services</em>, pp. 116-125. 2019.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Ma, Wenrui, et al. "Placing traffic-changing and partially-ordered NFV middleboxes via SDN." <em>IEEE Transactions on Network and Service Management</em> 16.4 (2019): 1303-1317.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 2018 Publications -->
+                <div class="mb-12">
+                    <h3 class="text-2xl font-bold text-fiu-navy mb-6">2018</h3>
+                    <div class="space-y-4">
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Tasnim, Samia, et al. "Semantic-aware clustering-based approach of trajectory data stream mining." <em>2018 International Conference on Computing, Networking and Communications (ICNC)</em>. IEEE, 2018.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Aleman, Concepcion Sanchez, et al. "Context-aware data cleaning for mobile wireless sensor networks: A diversified trust approach." <em>2018 International Conference on Computing, Networking and Communications (ICNC)</em>. IEEE, 2018.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Aleman, Concepcion Sanchez, et al. "Using Candlestick Charting and Dynamic Time Warping for Data Behavior Modeling and Trend Prediction for MWSN in IoT." <em>2018 IEEE International Conference on Big Data (Big Data)</em>. IEEE, 2018.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Aleman, Concepcion Sanchez, et al. "A dynamic trust weight allocation technique for data reconstruction in mobile wireless sensor networks." <em>2018 17th IEEE International Conference On Trust, Security And Privacy In Computing And Communications/12th IEEE International Conference On Big Data Science And Engineering (TrustCom/BigDataSE)</em>. IEEE, 2018.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 2017 Publications -->
+                <div class="mb-12">
+                    <h3 class="text-2xl font-bold text-fiu-navy mb-6">2017</h3>
+                    <div class="space-y-4">
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Ma, Wenrui, et al. "Traffic aware placement of interdependent NFV middleboxes." <em>IEEE INFOCOM 2017-IEEE Conference on Computer Communications</em>. IEEE, 2017.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Kamhoua, Georges A., et al. "Preventing colluding identity clone attacks in online social networks." <em>2017 IEEE 37th International Conference on Distributed Computing Systems Workshops (ICDCSW)</em>. IEEE, 2017.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Ma, Wenrui, et al. "SDN-based traffic aware placement of NFV middleboxes." <em>IEEE Transactions on Network and Service Management</em> 14.3 (2017): 528-542.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Kamhoua, Georges A., et al. "Approach to detect non-adversarial overlapping collusion in crowdsourcing." <em>2017 IEEE 36th International Performance Computing and Communications Conference (IPCCC)</em>. IEEE, 2017.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg">
+                            <p class="text-gray-700">Elorza, Yonah, Sevugarajan Sundarapandian, and Jerry Miller. "Stochastic Motion Planning for the Telebot." <em>International Journal of Next-Generation Computing</em> (2017): 99-107.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Earlier Years (2013-2016) - Collapsed for brevity -->
+                <div class="mb-12">
+                    <h3 class="text-2xl font-bold text-fiu-navy mb-6">2013-2016</h3>
+                    <div class="bg-white p-6 rounded-lg shadow-lg">
+                        <p class="text-gray-700 mb-4">Additional publications from 2013-2016 include works on:</p>
+                        <ul class="list-disc pl-6 text-gray-700 space-y-2">
+                            <li>Game-theoretic approaches for resource allocation in MANETs (2016)</li>
+                            <li>Distributed multi-robot area patrolling in adversarial environments (2015)</li>
+                            <li>Mobile learning object authoring tools for wireless networks (2015)</li>
+                            <li>Spacecraft hull deformation control using piezoelectric materials (2015)</li>
+                            <li>Prosthetic arm control using computer vision and biosignals (2014)</li>
+                            <li>SDN-based multipath routing for data center networks (2014)</li>
+                            <li>Verifiable fitness challenges and geofit systems (2014)</li>
+                            <li>Smart telepresence robot management systems (2013)</li>
+                            <li>Credibility optimization for secure mobile crowdsourcing (2013)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Press Release Section -->
+    <section class="py-16 bg-white">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-12">
+                <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-4">Press Release</h2>
+                <p class="text-xl text-gray-700">Projects by REU Students</p>
+            </div>
+
+            <div class="max-w-6xl mx-auto">
+                <div class="bg-gray-50 p-8 rounded-lg shadow-lg">
+                    <h3 class="text-2xl font-bold text-fiu-navy mb-6">TeleBot Project</h3>
+                    <p class="text-lg text-gray-700 mb-8">
+                        Three of our REU students significantly contributed to the TeleBot project, where the project received more than 25 media coverages from the US, Canada, UK, and the US. The prototype allows a disabled person to control the robot remotely, see everything the robot "sees," and interact with members of the public. The Telebot stands six feet tall, weighs about 75 pounds, and is controlled remotely. The dedication and passion of all of our REU undergraduate student members on the project and their countless hours of volunteer work for this project are priceless.
+                    </p>
+
+                    <h4 class="text-xl font-bold text-fiu-navy mb-6">Media Coverage</h4>
+                    <div class="grid md:grid-cols-2 gap-4">
+                        <div class="space-y-3">
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Sep 28, 2012</strong> - <a href="#" class="text-fiu-gold hover:underline">CNET: "Your move, creep: Researchers building RoboCop policeman"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Sep 29, 2012</strong> - <a href="#" class="text-fiu-gold hover:underline">Mashable: "These Robots Can Help Disabled Officers, Veterans Get Back to Work"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Sep 30, 2012</strong> - <a href="#" class="text-fiu-gold hover:underline">Gizmag: "The first Robocop could be a telepresence robot"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Oct 1, 2012</strong> - <a href="#" class="text-fiu-gold hover:underline">Telepresence Options: "The First Robocop Could Be A Telepresence Robot"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Oct 2, 2012</strong> - <a href="#" class="text-fiu-gold hover:underline">NBC: "Robo-cops may fight crime in the future – but it's not what you think"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Oct 4, 2012</strong> - <a href="#" class="text-fiu-gold hover:underline">Deccan Herald: "Robot to help disabled US cops patrol streets"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Nov 16, 2013</strong> - <a href="#" class="text-fiu-gold hover:underline">Miami Herald: "Miami Maker Faire celebrates creativity, draws plenty of future engineers"</a></p>
+                            </div>
+                        </div>
+                        <div class="space-y-3">
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Feb 12, 2014</strong> - <a href="#" class="text-fiu-gold hover:underline">National Fox News: "Real-life 'Robocop' helps wounded officers, vets work"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Feb 12, 2014</strong> - <a href="#" class="text-fiu-gold hover:underline">CBS 4, Miami: "FIU Developing 'RoboCop' Of The Future"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Feb 12, 2014</strong> - <a href="#" class="text-fiu-gold hover:underline">Yahoo, Canada: "Robots could help disabled cops and soldiers return to patrol duty"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Feb 13, 2014</strong> - <a href="#" class="text-fiu-gold hover:underline">WLRN 91.3 FM: "Real-Life RoboCop Makes Debut At FIU"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Feb 2014</strong> - <a href="#" class="text-fiu-gold hover:underline">UK Magazine, Empire: "The Real RoboCop"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Feb 2014</strong> - <a href="#" class="text-fiu-gold hover:underline">FlipSide Magazine: "Real-Life Robocops"</a></p>
+                            </div>
+                            <div class="bg-white p-4 rounded-lg shadow">
+                                <p class="text-gray-700"><strong>Feb 26, 2014</strong> - <a href="#" class="text-fiu-gold hover:underline">UNIVISION: "'Telebot', el robot policía que ayudará a oficiales discapacitados"</a></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
