--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <!-- Slides -->
             <div class="slides-container h-full">
                 <div class="slide absolute inset-0 w-full h-full transition-opacity duration-500">
-                    <img src="group2015.jpg" alt="REU Students" class="w-full h-full object-cover">
+                    <img src="Group2015.jpg" alt="REU Students" class="w-full h-full object-cover">
                     <div class="absolute inset-0 bg-black bg-opacity-50"></div>
                 </div>
                 <div class="slide absolute inset-0 w-full h-full transition-opacity duration-500 opacity-0">
