--- a/faculty.html
+++ b/faculty.html
@@ -98,18 +98,21 @@
                         <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. Nikki Pissinou</h3>
                         <p class="text-fiu-gold font-semibold mb-3">Professor, School of Computing and Information Sciences</p>
                         <p class="text-gray-700 mb-4">
-                            Dr. Pissinou is a highly accomplished researcher with over 250 publications in areas such as networking, 
-                            security, and mobile systems, and has co-edited numerous conference volumes and texts. Her work, widely 
-                            cited and funded by major agencies like NSF and NASA, has earned her multiple awards, and she has played 
-                            leading roles in professional communities, mentored over 19 Ph.D. students, and served on countless editorial 
-                            and advisory boards.
+                            Dr. Pissinou has published over two hundred and fifty research papers in peer reviewed journals, conference proceedings, books, and book chapters on networking, telecommunications, distributed systems, mobile computing, security and aspects of nontraditional data management including co-editing over four texts in the area of mobile and wireless networking andsystems and over fourteen IEEE and ACM conference volumes. 
+                            Widely cited in books and research papers, her research has been funded by NSF, DHS, NASA, DOT, DoD, state governments and industry. 
+                            She has graduated over nineteen Ph.D. students who now hold positions in academia, federal government and industry. 
+                            Dr. Pissinou has served as the general and technical program chair on a variety of ACM and IEEE conferences. 
+                            She also served on hundreds of IEEE and ACM program committees, organizing committees, review panels, advisory boards, editorial boards, etc. 
+                            She has served as an editor of many journals including the IEEE Transactions on Data and Knowledge Engineering. 
+                            She also has been the founder of many professional forums, including the ACM GIS. Dr. Pissinou has given keynote talks at various events and served as consultant to industry. 
+                            Her achievements have been recognized by her peers, who have given her several awards and honors, including best paper awards.
                         </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
                             <div class="flex flex-wrap gap-2">
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">IoT Security</span>
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Cyber-Physical Systems</span>
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Wireless Sensor Networks</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Distributed Systems</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Mobile Computing</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Telecommunications</span>
                             </div>
                         </div>
                         <div class="flex items-center space-x-3 text-gray-600">
@@ -131,15 +134,16 @@
                         <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. Deng Pan</h3>
                         <p class="text-fiu-gold font-semibold mb-3">Professor, School of Computing and Information Sciences</p>
                         <p class="text-gray-700 mb-4">
-                            Dr. Deng Pan received his Ph.D. in computer science from SUNY Stony Brook in 2007. His research focuses on 
-                            high-speed networking, including network function virtualization, data center networks, and energy-efficient systems. 
-                            He has published over fifty peer-reviewed papers and served on technical committees for major conferences 
-                            like IEEE INFOCOM, GLOBECOM, and ICPP. 
+                            Dr. Pan received his Ph.D. degree in computer science from State University of New York at Stony Brook in 2007. 
+                            His research interests are generally in high performance switch design and high speed networking. 
+                            His current research focuses on network function virtualization, data center networking, and energy efficient networking. 
+                            He has published over fifty peer-reviewed papers in leading refereed journals and conferences, including the IEEE Transactions on Computers, IEEE Transactions on Communications, IEEE INFOCOM, and IEEE International Parallel and Distributed Processing Symposium. 
+                            He has served as local arrangement co-chair or technical program committee member in many international conferences, including IEEE INFOCOM, IEEE GLOBECOM, and ICPP. 
                         </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
                             <div class="flex flex-wrap gap-2">
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">High-speed networking</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">High speed networking</span>
                                 <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Network Function Virtualization (NFV)</span>
                                 <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Energy-Efficient and Data Center Networking</span>
                             </div>
@@ -163,11 +167,15 @@
                         <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. Xuyu Wang</h3>
                         <p class="text-fiu-gold font-semibold mb-3">Associate Professor, School of Computing and Information Sciences</p>
                         <p class="text-gray-700 mb-4">
-                            Dr. Xuyu Wang is an Assistant Professor at FIU's Knight Foundation School of Computing and Information Sciences. 
-                            He received his Ph.D. from Auburn University in 2018 and previously taught at California State University, Sacramento. 
-                            His research focuses on wireless sensing, IoT, and smart health. He is a recipient of the NSF CRII Award and multiple best 
-                            paper/demo awards from IEEE conferences. Dr. Wang has organized tutorials and sessions at major conferences and serves as 
-                            an editor for leading journals.
+                            Dr. Xuyu Wang is an Assistant Professor in the Knight Foundation School of Computing and Information Sciences at Florida International University. 
+                            Before joining FIU, he was an Assistant Professor in the Department of Computer Science at California State University, Sacramento. 
+                            He received his Ph.D. from the Department of Electrical and Computer Engineering at Auburn University in 2018. 
+                            His research interests include wireless sensing, Internet of Things, wireless localization, smart health, wireless networks, and AI security. 
+                            He received the NSF CRII Award in 2021. 
+                            He was a co-recipient of the Second Prize of the Natural Scientific Award of the Ministry of Education, China, in 2013, the IEEE INFOCOM 2022 Best Demo Award, the IEEE ICC 2022 Best Paper Award, the IEEE Vehicular Technology Society 2020 Jack Neubauer Memorial Award, the IEEE GLOBECOM 2019 Best Paper Award, the IEEE ComSoc MMTC Best Journal Paper Award in 2018, the IEEE PIMRC 2017 Best Student Paper Award, and the IEEE SECON 2017 Best Demo Award. 
+                            He was invited to organize AI health tutorials at CVPR 2020, ICC 2022, and CVPR 2022, a special session at IEEE BHI 2021, and give a keynote speech at CVPM 2020. 
+                            He is an editor of Elsevier Book titled "Contactless Vital Signs Monitoring". 
+                            He is also an associate editor of Elsevier Digital Communications and Networks and a guest editor of ACM Transactions on Sensor Networks.
                         </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
@@ -350,7 +358,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="grid sm:grid-cols-2 lg:grid-cols-5 gap-6">
                 <div class="sm:col-span-2 lg:col-span-1">
                     <h3 class="text-lg font-bold mb-4">REU ASSET: Advanced Secured Sensor Enabling Technologies</h3>
                     <p class="text-gray-300">Florida International University<br>Miami, FL 33199</p>
@@ -388,6 +396,19 @@
                             </a>
                             <a href="https://www.instagram.com/fiuinstagram/?hl=en" class="text-gray-300 hover:text-fiu-gold transition-colors" target="_blank">
                                 <i class="fab fa-instagram text-xl"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex justify-center">
+                    <div>
+                        <h3 class="text-lg font-bold mb-4 text-center">Sponsors</h3>
+                        <div class="flex flex-col items-center space-y-3">
+                            <a href="https://www.nsf.gov/" target="_blank" class="opacity-80 hover:opacity-100 transition-opacity">
+                                <img src="NSF-300x300.png" alt="National Science Foundation" class="h-12 w-12 object-contain">
+                            </a>
+                            <a href="https://www.defense.gov/" target="_blank" class="opacity-80 hover:opacity-100 transition-opacity">
+                                <img src="Seal_of_the_United_States_Department_of_Defense_1949–2001-300x300.png" alt="U.S. Department of Defense" class="h-12 w-12 object-contain">
                             </a>
                         </div>
                     </div>
