--- a/alumni.html
+++ b/alumni.html
@@ -1591,7 +1591,7 @@
      <!-- Footer -->
      <footer class="bg-gray-800 text-white py-12">
          <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-8">
+             <div class="grid sm:grid-cols-2 lg:grid-cols-5 gap-6">
                  <div class="sm:col-span-2 lg:col-span-1">
                      <h3 class="text-lg font-bold mb-4">REU ASSET: Advanced Secured Sensor Enabling Technologies</h3>
                      <p class="text-gray-300">Florida International University<br>Miami, FL 33199</p>
@@ -1635,9 +1635,22 @@
                          </div>
                      </div>
                  </div>
+                 <div class="flex justify-center">
+                     <div>
+                         <h3 class="text-lg font-bold mb-4 text-center">Sponsors</h3>
+                         <div class="flex flex-col items-center space-y-3">
+                             <a href="https://www.nsf.gov/" target="_blank" class="opacity-80 hover:opacity-100 transition-opacity">
+                                 <img src="NSF-300x300.png" alt="National Science Foundation" class="h-12 w-12 object-contain">
+                             </a>
+                             <a href="https://www.defense.gov/" target="_blank" class="opacity-80 hover:opacity-100 transition-opacity">
+                                 <img src="Seal_of_the_United_States_Department_of_Defense_1949–2001-300x300.png" alt="U.S. Department of Defense" class="h-12 w-12 object-contain">
+                             </a>
+                         </div>
+                     </div>
+                 </div>
              </div>
              <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
-                <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation.</p>
+                <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation and the U.S. Department of Defense.</p>
             </div>
         </div>
     </footer>
