ton of more adds

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
             <div class="mt-8 text-center">
                 <p class="text-xs text-gray-500 max-w-4xl mx-auto">
-                    This material is based upon work supported by the National Science Foundation under Grant No. [Grant Number] and the U.S. Department of Defense. Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation or the Department of Defense.
+                    This material is based upon work supported by the National Science Foundation under Grant No. 6365 and the U.S. Department of Defense. Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation or the Department of Defense.
                 </p>
             </div>
         </div>
