--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <a href="/" class="bg-fiu-gold text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">Home</a>
                         <a href="/about/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">About</a>
                         <a href="/research/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Research Projects</a>
-                        <a href="/faculty/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Faculty Mentors</a>
                         <a href="/application/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Application Info</a>
+                        <a href="/faculty/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Faculty Mentors</a>
                         <a href="/alumni/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Alumni</a>
                         <a href="/faq/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">FAQs</a>
                         <a href="/contact/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Contact</a>
@@ -64,8 +64,8 @@
                 <a href="/" class="bg-fiu-gold text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Home</a>
                 <a href="/about/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">About</a>
                 <a href="/research/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Research Projects</a>
-                <a href="/faculty/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Faculty Mentors</a>
                 <a href="/application/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Application Info</a>
+                <a href="/faculty/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Faculty Mentors</a>
                 <a href="/alumni/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Alumni</a>
                 <a href="/faq/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">FAQs</a>
                 <a href="/contact/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Contact</a>
@@ -221,18 +221,18 @@
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
                     <div class="bg-fiu-navy text-white w-12 h-12 rounded-lg flex items-center justify-center mb-4">
-                        <i class="fas fa-satellite-dish text-xl"></i>
+                        <i class="fas fa-brain text-xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-fiu-navy mb-3">Advanced Sensor Technologies</h3>
-                    <p class="text-gray-700">Develop next-generation sensors for IoT, environmental monitoring, and defense applications.</p>
+                    <h3 class="text-xl font-bold text-fiu-navy mb-3">Artificial Intelligence</h3>
+                    <p class="text-gray-700">Developing intelligent systems and algorithms for autonomous decision-making, pattern recognition, and problem-solving in sensor networks and cybersecurity applications.</p>
                 </div>
                 
                 <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
                     <div class="bg-fiu-navy text-white w-12 h-12 rounded-lg flex items-center justify-center mb-4">
-                        <i class="fas fa-shield-alt text-xl"></i>
+                        <i class="fas fa-robot text-xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-fiu-navy mb-3">Cybersecurity & Privacy</h3>
-                    <p class="text-gray-700">Secure communication protocols, data privacy, and protection of sensor networks.</p>
+                    <h3 class="text-xl font-bold text-fiu-navy mb-3">Machine Learning</h3>
+                    <p class="text-gray-700">Advanced machine learning techniques for data analysis, predictive modeling, and optimization in sensor technologies and security systems.</p>
                 </div>
                 
                 <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
