--- a/research/index.html
+++ b/research/index.html
@@ -43,8 +43,8 @@
                         <a href="/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Home</a>
                         <a href="/about/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">About</a>
                         <a href="/research/" class="bg-fiu-gold text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">Research Projects</a>
-                        <a href="/faculty/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Faculty Mentors</a>
                         <a href="/application/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Application Info</a>
+                        <a href="/faculty/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Faculty Mentors</a>
                         <a href="/alumni/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Alumni</a>
                         <a href="/faq/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">FAQs</a>
                         <a href="/contact/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">Contact</a>
@@ -64,8 +64,8 @@
                 <a href="/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Home</a>
                 <a href="/about/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">About</a>
                 <a href="/research/" class="bg-fiu-gold text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Research Projects</a>
-                <a href="/faculty/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Faculty Mentors</a>
                 <a href="/application/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Application Info</a>
+                <a href="/faculty/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Faculty Mentors</a>
                 <a href="/alumni/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Alumni</a>
                 <a href="/faq/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">FAQs</a>
                 <a href="/contact/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Contact</a>
@@ -166,7 +166,7 @@
                         <p class="text-lg text-gray-700 mb-6 leading-relaxed">
                             Deep learning has been shown to be incredibly vulnerable to hard-to-detect adversarial examples. 
                             However, it is increasingly being used to aid in the data cleaning and feature selection in applications with highly complex data, such as in sensor network applications. 
-                            To explore the fundamental characteristics that contribute to the learning models’ sensitivity to adversarial examples, this research will investigate how non-linearity in activation functions influences robustness against adversarial attacks for secure sensing applications. 
+                            To explore the fundamental characteristics that contribute to the learning models' sensitivity to adversarial examples, this research will investigate how non-linearity in activation functions influences robustness against adversarial attacks for secure sensing applications. 
                             We plan to study this by introducing a new class of highly non-linear activation functions using quantum mechanics principles. REU students may participate in: 
                             (1) deriving the quantum mechanics principles into a set of functions that can be used as activation function for sensing applications; 
                             (2) simulating the adversarial attacks over a variety of machine learning models and datasets; 
