--- a/faculty/index.html
+++ b/faculty/index.html
@@ -43,8 +43,8 @@
                         <a href="/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Home</a>
                         <a href="/about/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">About</a>
                         <a href="/research/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">Research Projects</a>
-                        <a href="/faculty/" class="bg-fiu-gold text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">Faculty Mentors</a>
                         <a href="/application/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Application Info</a>
+                        <a href="/faculty/" class="bg-fiu-gold text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">Faculty Mentors</a>
                         <a href="/alumni/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">Alumni</a>
                         <a href="/faq/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium transition-colors">FAQs</a>
                         <a href="/contact/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy px-3 py-2 rounded-md text-sm font-medium">Contact</a>
@@ -64,8 +64,8 @@
                 <a href="/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Home</a>
                 <a href="/about/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">About</a>
                 <a href="/research/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Research Projects</a>
-                <a href="/faculty/" class="bg-fiu-gold text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Faculty Mentors</a>
                 <a href="/application/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Application Info</a>
+                <a href="/faculty/" class="bg-fiu-gold text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Faculty Mentors</a>
                 <a href="/alumni/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Alumni</a>
                 <a href="/faq/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">FAQs</a>
                 <a href="/contact/" class="text-white hover:bg-fiu-gold hover:text-fiu-navy block px-3 py-2 rounded-md text-base font-medium">Contact</a>
@@ -98,14 +98,11 @@
                         <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. Nikki Pissinou</h3>
                         <p class="text-fiu-gold font-semibold mb-3">Professor & Director of Telecommunications and Information Technology Institute</p>
                         <p class="text-gray-700 mb-4">
-                            Dr. Pissinou has published over two hundred and fifty research papers in peer reviewed journals, conference proceedings, books, and book chapters on networking, telecommunications, distributed systems, mobile computing, security and aspects of nontraditional data management including co-editing over four texts in the area of mobile and wireless networking andsystems and over fourteen IEEE and ACM conference volumes. 
-                            Widely cited in books and research papers, her research has been funded by NSF, DHS, NASA, DOT, DoD, state governments and industry. 
-                            She has graduated over nineteen Ph.D. students who now hold positions in academia, federal government and industry. 
-                            Dr. Pissinou has served as the general and technical program chair on a variety of ACM and IEEE conferences. 
-                            She also served on hundreds of IEEE and ACM program committees, organizing committees, review panels, advisory boards, editorial boards, etc. 
-                            She has served as an editor of many journals including the IEEE Transactions on Data and Knowledge Engineering. 
-                            She also has been the founder of many professional forums, including the ACM GIS. Dr. Pissinou has given keynote talks at various events and served as consultant to industry. 
-                            Her achievements have been recognized by her peers, who have given her several awards and honors, including best paper awards.
+                            Dr. Pissinou has published over 250 research papers on networking, telecommunications, distributed systems, mobile computing, security, and nontraditional data management, including co-editing four texts and over fourteen IEEE and ACM conference volumes. 
+                            Her research has been funded by NSF, DHS, NASA, DOT, DoD, and industry. 
+                            She has graduated over nineteen Ph.D. students now in academia, government, and industry. 
+                            She has served as chair or committee member in many ACM and IEEE conferences, and as editor of journals including IEEE Transactions on Data and Knowledge Engineering. 
+                            She has founded forums like ACM GIS and received numerous awards and honors.
                         </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
@@ -134,14 +131,11 @@
                         <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. Christian Poellabauer</h3>
                         <p class="text-fiu-gold font-semibold mb-3">Professor and Interim Associate Dean for Research and Graduate Studies</p>
                         <p class="text-gray-700 mb-4">
-                            Dr. Christian Poellabauer is a Professor in the Knight Foundation School of Computing and Information Sciences at Florida International University. 
-                            He received his Ph.D. from the Georgia Institute of Technology in 2004 and worked as Assistant, Associate, and Full Professor in the Computer Science and Engineering Department at the University of Notre Dame from 2004 to 2021. 
-                            At Notre Dame, he also served as Associate Director of the Lucy Family Institute for Data and Society and Founding Director of the Applied Analytics and Emerging Technologies Lab. 
-                            At FIU, he directs the MOSAIC (Mobile Sensing and Analytics) Lab, which focuses on developing novel personal, social, and crowdsensing solutions in a variety of application domains, primarily in the healthcare field. Notable outcomes of his lab's research include the development of various solutions using mobile devices, wearables, and virtual assistants for the diagnosis of concussions, the rehabilitation progress of amputees and stroke survivors, the monitoring of the progression of neurological conditions, and the detection of depression in college students and PTSD in first responders. 
-                            Other areas of interest include wireless/sensor/vehicular networks, the Internet-of-Things, and edge computing based AI solutions, just to name a few. 
-                            He also has strong interest in assisting with students with startup efforts and he is a strong advocate for the early inclusion of undergraduate and high school students in hands-on research projects. 
-                            He was named a Fulbright Scholar in 2018 and he has co-authored a textbook on Wireless Sensor Networks, which has been translated into Chinese and Persian. His research efforts have been supported by organizations such as the NIH, NSF (including a 2006 CAREER award), 
-                            Department of Education, and DoD, and numerous private organizations and businesses such as IBM, Toyota, Ford Research, the National Football League, National Geographic, GE Health, Motorola Labs, among others.
+                            Dr. Christian Poellabauer is a Professor at FIU's Knight Foundation School of Computing and Information Sciences. 
+                            He received his Ph.D. from Georgia Tech and previously served at the University of Notre Dame. 
+                            He directs the MOSAIC Lab, developing mobile and wearable sensing solutions for healthcare, including concussion diagnosis and monitoring of neurological conditions. 
+                            His work spans IoT, wireless networks, and edge AI. He is a Fulbright Scholar, co-author of a textbook on Wireless Sensor Networks, and supports student startup efforts. 
+                            His research is funded by NIH, NSF, DoD, and partners like IBM, Ford, the NFL, and National Geographic.
                         </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
@@ -153,10 +147,10 @@
                             </div>
                         </div>
                         <div class="flex items-center space-x-3 text-gray-600">
-                            <a href="mailto:cpoellab@nd.edu" class="hover:text-fiu-gold transition-colors">
+                            <a href="mailto:cpoellab@fiu.edu" class="hover:text-fiu-gold transition-colors">
                                 <i class="fas fa-envelope"></i>
                             </a>
-                            <a href="https://www.nd.edu/~cpoellab/" class="hover:text-fiu-gold transition-colors" target="_blank">
+                            <a href="https://www.cis.fiu.edu/faculty-staff/christian-poellabauer/" class="hover:text-fiu-gold transition-colors" target="_blank">
                                 <i class="fas fa-globe"></i>
                             </a>
                         </div>
@@ -205,15 +199,11 @@
                         <p class="text-fiu-gold font-semibold mb-3">Associate Professor, School of Computing and Information Sciences</p>
                         <p class="text-gray-700 mb-4">
                             Dr. Xuyu Wang is an Assistant Professor in the Knight Foundation School of Computing and Information Sciences at Florida International University. 
-                            Before joining FIU, he was an Assistant Professor in the Department of Computer Science at California State University, Sacramento. 
-                            He received his Ph.D. from the Department of Electrical and Computer Engineering at Auburn University in 2018. 
+                            He received his Ph.D. in Electrical and Computer Engineering from Auburn University in 2018 and was previously an Assistant Professor at California State University, Sacramento. 
                             His research interests include wireless sensing, Internet of Things, wireless localization, smart health, wireless networks, and AI security. 
-                            He received the NSF CRII Award in 2021. 
-                            He was a co-recipient of the Second Prize of the Natural Scientific Award of the Ministry of Education, China, in 2013, the IEEE INFOCOM 2022 Best Demo Award, the IEEE ICC 2022 Best Paper Award, the IEEE Vehicular Technology Society 2020 Jack Neubauer Memorial Award, the IEEE GLOBECOM 2019 Best Paper Award, the IEEE ComSoc MMTC Best Journal Paper Award in 2018, the IEEE PIMRC 2017 Best Student Paper Award, and the IEEE SECON 2017 Best Demo Award. 
-                            He was invited to organize AI health tutorials at CVPR 2020, ICC 2022, and CVPR 2022, a special session at IEEE BHI 2021, and give a keynote speech at CVPM 2020. 
-                            He is an editor of Elsevier Book titled "Contactless Vital Signs Monitoring". 
-                            He is also an associate editor of Elsevier Digital Communications and Networks and a guest editor of ACM Transactions on Sensor Networks.
-                        </p>
+                            He received the NSF CRII Award in 2021 and several IEEE best paper and demo awards. 
+                            He has organized tutorials at CVPR and ICC and served as a keynote speaker. 
+                            He is editor of Contactless Vital Signs Monitoring and serves as associate editor for Elsevier’s Digital Communications and Networks and guest editor for ACM Transactions on Sensor Networks.
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
                             <div class="flex flex-wrap gap-2">
@@ -257,6 +247,9 @@
                             <a href="mailto:msha@fiu.edu" class="hover:text-fiu-gold transition-colors">
                                 <i class="fas fa-envelope"></i>
                             </a>
+                            <a href="https://www.cis.fiu.edu/faculty-staff/mo-sha/" class="hover:text-fiu-gold transition-colors" target="_blank">
+                                <i class="fas fa-globe"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -284,6 +277,9 @@
                             <a href="mailto:carbunar@cs.fiu.edu" class="hover:text-fiu-gold transition-colors">
                                 <i class="fas fa-envelope"></i>
                             </a>
+                            <a href="https://www.cis.fiu.edu/faculty-staff/bogdan-carbunar/" class="hover:text-fiu-gold transition-colors" target="_blank">
+                                <i class="fas fa-globe"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -309,6 +305,9 @@
                         <div class="flex items-center space-x-3 text-gray-600">
                             <a href="mailto:fshirani@fiu.edu" class="hover:text-fiu-gold transition-colors">
                                 <i class="fas fa-envelope"></i>
+                            </a>
+                            <a href="https://www.cis.fiu.edu/faculty-staff/farhad-shirani/" class="hover:text-fiu-gold transition-colors" target="_blank">
+                                <i class="fas fa-globe"></i>
                             </a>
                         </div>
                     </div>
