--- a/faq/index.html
+++ b/faq/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQs - REU Site: Quantum & Secure Networking at FIU</title>
+    <link rel="icon" type="image/jpeg" href="/FIU-logo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -370,7 +371,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
-                <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation.</p>
+                <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation and the U.S. Department of Defense.</p>
             </div>
         </div>
     </footer>
