--- a/research/index.html
+++ b/research/index.html
@@ -643,7 +643,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
-                <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation and the Department of Defense.</p>
+                <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation and the U.S. Department of Defense.</p>
             </div>
         </div>
     </footer>
